# Survey_platform

./: .env.sample  .gitignore  README.md  pyproject.toml  survey_data.json  user_data.json
apps/survey/: admin.py  models.py  permissions.py  services.py  tests.py  urls.py
apps/survey/migrations/: 0001_initial.py  0002_like_dislike_like_like.py  0003_alter_answer_question_alter_choice_question_and_more.py  0004_rename_owner_survey_user.py  0005_answer_text.py
apps/survey/serializers/: answer.py  choice.py  like.py  question.py  survey.py  view.py
apps/survey/views/: answer.py  choice.py  like.py  question.py  survey.py  view.py
apps/user/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/user/management/commands/: csu.py
apps/user/migrations/: 0001_initial.py  0002_user_avatar.py  0003_user_username.py  0004_alter_user_username.py  0005_alter_user_username.py  0006_remove_user_username.py
config/: settings.py  urls.py
